--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-plymouth-theme-android-d (0.3) bionic; urgency=medium
+plymouth-theme-android-d (0.3ubuntu1) bionic; urgency=medium
 
   * Yellow tinge in logo
 
