--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+plymouth-theme-android-d (0.5) bionic; urgency=medium
+
+  * More yellow 
+
+ -- Archisman Panigrahi <apandada1@gmail.com>  Sun, 10 Feb 2019 16:40:56 +0530
+
 plymouth-theme-android-d (0.4ubuntu1) bionic; urgency=medium
 
   * Gradient
