Edit yellow background

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+plymouth-theme-android-d (0.5ubuntu1) bionic; urgency=medium
+
+  * It went outside
+
+ -- Archisman Panigrahi <apandada1@gmail.com>  Thu, 14 Feb 2019 00:54:21 +0530
+
 plymouth-theme-android-d (0.5) bionic; urgency=medium
 
   * More yellow 
